--- a/stories/yue/0110_一粒小種子：旺加里·馬塔伊嘅故仔_slides.html
+++ b/stories/yue/0110_一粒小種子：旺加里·馬塔伊嘅故仔_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>瑪哥威 - Global African Storybook</title>
+  <title>一粒小種子：旺加里·馬塔伊嘅故仔 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="瑪哥威" class="slide level1">
-<h1>瑪哥威</h1>
+<section id="一粒小種子旺加里馬塔伊嘅故仔" class="slide level1">
+<h1>一粒小種子：旺加里·馬塔伊嘅故仔</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/02.jpg" /></p>
-<p>喺內羅比呢座繁忙嘅城市度，有班流浪街頭嘅男仔，佢哋日復一日噉過日子，從來都唔知道乜嘢叫做舒適安逸嘅生活。一日朝頭早，班男仔喺凍冰冰嘅行人路上面醒翻，摺埋佢哋攞嚟瞓街嘅氊仔。天氣太凍喇，為咗驅寒，佢哋就要用執翻嚟嘅垃圾點著堆火。班流浪仔中間有一個男仔叫做瑪哥威。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/02.jpg" /></p>
+<p>喺東非肯雅山嘅半山度，有条小村，村入便有個小女仔同佢媽咪一齊喺農田度做嘢，呢個女仔叫做旺加里。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/03.jpg" /></p>
-<p>瑪哥威嘅老竇老母過身嘅時候，佢得五歲啫，噉佢就搬去同佢亞叔一齊住。佢亞叔從來都冇關心過瑪哥威嘅。瑪哥威喺叔叔屋企度捱飢抵冷，仲要做好多粗重嘢添。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/03.jpg" /></p>
+<p>旺加里好鍾意喺出便做嘢。喺佢屋企農田度，旺加里用開山刀劈開土地，喺溫暖嘅土壤度播撒啲小種子。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/04.jpg" /></p>
-<p>一旦瑪哥威有少少抱怨，佢亞叔就會打佢。有一次呢，瑪哥威問吓佢亞叔可唔可以去翻學，佢亞叔就好狼胎噉打咗佢幾下，就話：“你個蠢材，使唔使翻學先？”瑪哥威過咗三年噉嘅辛苦日子，卒之就離家出走，無家可歸。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/04.jpg" /></p>
+<p>佢每日最鍾意嘅時間就係日落時分。當天黑咗，睇唔到花花草草嘅時候，旺加里就知道佢應該翻屋企喇。佢喺穿過農田嘅小路徑度行行吓，有啲時仲要遇水過河添。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/05.jpg" /></p>
-<p>流浪生活非常之艱難，班男仔多數都係每日好勉強先至可以搵翻一餐啫。佢哋有啲時要俾差佬拉咗，有啲時又要捱人打。當佢哋生病嘅時候，仲冇人會照顧佢哋添。呢班男仔唯有靠揸兜乞食得翻嚟嘅少少錢過活，佢哋有啲時亦都會賣啲膠品同舊嘢賺翻少少錢。有啲時第二啲流浪漢會嚟撩交打，爭地頭，嗰個時候生活就更加辛苦。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/05.jpg" /></p>
+<p>旺加里係一個好叻嘅細路女，佢急不及待噉想要去翻學，但係佢爹地媽咪就希望佢留喺屋企度幫手做嘢。旺加里七歲嗰陣時，佢大佬終於說服咗爹地媽咪，俾旺加里去翻學。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/06.jpg" /></p>
-<p>有一日呢，瑪哥威正喺度抄緊垃圾桶，佢搵到咗本甩皮甩骨嘅故仔書。佢吹走咗書上面嘅塵，放咗入佢嘅袋度。以後每日佢得閒嘅時候，就會攞本書出嚟，翻到圖畫頁，只可惜佢睇唔明上面嘅文字。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/06.jpg" /></p>
+<p>旺加里好鍾意學嘢啦！佢讀咗好多書，仲學到咗好多知識。佢嘅成績非常之好，好到後尾佢收到咗美國大學嘅錄取信，邀請佢去美國讀書。旺加里太開心喇，佢真係好想去到世界各地周圍學嘢睇吓。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/07.jpg" /></p>
-<p>圖畫書講嘅係一個男仔大個之後就成為飛機師嘅故仔。瑪哥威有啲時會發白日夢想象自己都成為飛機師嘞。有啲時，佢仲會想象自己就係故仔入便嘅男仔。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/07.jpg" /></p>
+<p>喺美國大學嗰便，旺加里學到咗好多新嘢。佢研究植物同佢哋嘅生長過程。佢諗起自己係點樣大個咗：同班兄弟喺美麗嘅肯雅森林度玩遊戲。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
-<p>有一日，天氣好凍，瑪哥威企喺街頭乞食。一個男人走過嚟，同佢打招呼，就話：“你好，我叫湯瑪斯。我喺呢度左近打工，你得閒可以去嗰便攞啲嘢食。”佢指住間藍頂黃牆嘅大屋，“我希望你唔會嫌棄，去嗰便攞啲嘢食啦！”瑪哥威睇咗吓個男人，又睇咗吓間屋，就話：“或者啦！”然之後佢就走開咗嘞。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/08.jpg" /></p>
+<p>佢學得越多，就越熱愛肯雅人民。佢想要幫助肯雅人民過上自由、快樂嘅生活。佢學得越多，就越掛住自己喺非洲嘅家鄉。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/09.jpg" /></p>
-<p>跟住落嚟嘅幾個月，班流浪男仔慢慢識咗湯瑪斯。佢好鍾意同人傾偈，特別係啲無家可歸嘅人。湯瑪斯會聽人哋講自己嘅經歷。佢雖然成日苦瓜噉嘅面，但係非常之有耐心、有禮貌，尊重他人。班男仔開始白晝就去藍頂黃牆屋度搵嘢食。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/09.jpg" /></p>
+<p>旺加里完成咗學業之後，佢就翻去咗肯雅，但係佢嘅祖國已經今非昔比啦。周圍都係新起咗嘅農場，婦女都搵唔到柴嚟做飯。人哋過住窮苦嘅日子，佢哋嘅細蚊仔又飢腸轆轆。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
-<p>有日呢，瑪哥威正坐喺行人路上面睇故仔書，湯瑪斯就嚟到佢隔籬坐低。湯瑪斯問佢：“呢本書講咩嘢故仔呢？”瑪哥威答佢就話：“係一個男仔成為飛機師嘅故仔。”湯瑪斯又問佢：“男仔叫咩嘢名呢？”瑪哥威好細聲噉就話：“我唔知道，我唔識字。”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/10.jpg" /></p>
+<p>旺加里知道自己要做乜嘢嘞。佢教咗啲婦女點樣用種子種出大樹。啲婦女賣樹賺錢，補貼家用。啲婦女都好開心。旺加里令到佢哋覺得自己變得堅強勇敢嘞。</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/11.jpg" /></p>
-<p>當佢哋再次見面嘅時候，瑪哥威開始同湯瑪斯講自己嘅經歷，佢叔叔係點樣對待佢，佢又係點樣逃離佢叔叔屋企。湯瑪斯乜都冇講，亦都冇叫瑪哥威佢應該點做，但係佢成日都會好留心噉樣聽佢講嘢。有啲時佢哋會一路喺藍頂黃牆屋度食嘢，一路傾吓偈。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/11.jpg" /></p>
+<p>時光飛逝，小樹長成咗參天大樹，又匯聚成咗森林，河水穿流而過。旺加里嘅辦法傳遍咗成個非洲。今日，因為旺加里當初嘅種子，已經長出咗幾百萬樖大樹。</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/12.jpg" /></p>
-<p>瑪哥威十歲生日嗰陣時，湯瑪斯俾咗佢本新故仔書，書入便係講一個鄉下男仔成為足球員嘅故仔。湯瑪斯俾瑪哥威講過呢個故仔好多次。有一日，湯瑪斯就話：“我覺得你應該去翻學，去識字。你覺得點呀？”湯瑪斯就話佢知道一個地方，可以俾細蚊仔住喺嗰便翻學。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/12.jpg" /></p>
+<p>旺加里努力工作，引起了全世界人嘅注意，人哋授予佢諾貝爾和平獎，佢係非洲第一位獲得呢個殊榮嘅女性。</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +195,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
-<p>瑪哥威諗諗吓去新地方生活，翻學。但係，如果佢亞叔講得啱呢，如果佢真係太蠢唔使翻學點算呀？如果喺新地方，佢又要捱打點算呀？佢有少少驚，心諗：“可能我就整定要瞓街㗎。”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/13.jpg" /></p>
+<p>旺加里喺2011年過身，但係每次我哋見到樖大樹嘅時候，都會諗翻起呢位傑出嘅女性。</p>
 <center>
 <strong>12</strong>
 </center>
@@ -204,48 +204,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/14.jpg" /></p>
-<p>佢將自己嘅諗法話俾咗湯瑪斯聽。湯瑪斯對佢循循善誘，終於說服咗佢，喺新地方生活一定會更加好。</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/15.jpg" /></p>
-<p>瑪哥威搬到咗新屋企，新屋企嘅屋頂係綠色嘅。佢同兩個男仔住埋同一間房。間屋入便一共仲住埋十個細蚊仔。同佢哋喺一齊住嘅係思思阿姨同佢老公，仲有三隻狗，一隻貓，一隻老山羊。</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/16.jpg" /></p>
-<p>瑪哥威開始讀書，佢遇到咗唔少困難，好難先趕上班同學，有啲時佢爭啲就要放棄啦。但係佢每次諗翻故仔書入便嘅飛機師同足球員，佢都會堅持落嚟，就好似佢哋一樣。</p>
-<center>
-<strong>15</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/17.jpg" /></p>
-<p>有一日呢，瑪哥威正喺間藍頂屋後院度睇緊書，湯瑪斯就嚟到坐喺佢隔籬。湯瑪斯問佢：“呢本書講咩嘢故仔呢？”瑪哥威答佢就話：“係一個男仔成為老師嘅故仔。”湯瑪斯又問佢：“男仔叫咩嘢名呢？”瑪哥威笑笑口噉就話：“佢叫瑪哥威。”</p>
-<center>
-<strong>16</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="瑪哥威-1">瑪哥威</h2>
-<strong>文:</strong> Lesley Koyi<br> <strong>圖:</strong> Wiehan de Jager<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
+<h2 id="一粒小種子旺加里馬塔伊嘅故仔-1">一粒小種子：旺加里·馬塔伊嘅故仔</h2>
+<strong>文:</strong> Nicola Rijsdijk<br> <strong>圖:</strong> Maya Marshak<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/magozwe-0'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/tiny-seed-story-wangari-maathai'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
