--- a/stories/yue/0262_瑪哥威.html
+++ b/stories/yue/0262_瑪哥威.html
@@ -49,7 +49,7 @@ Lesley Koyi<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/02.jpg" /></p>
 
-<p>喺內羅比呢座繁忙嘅城市度，有班流浪街頭嘅男仔，佢哋日復一日噉過日子，從來都唔知道乜嘢係舒適安逸嘅生活。一日朝頭早，班男仔喺凍冰冰嘅行人路上面醒翻，摺埋佢哋攞嚟瞓街嘅氊仔。天氣太凍喇，為咗驅寒，佢哋就要用執翻嚟嘅垃圾點著堆火。班流浪仔中間有一個男仔叫做瑪哥威。</p>
+<p>喺內羅比呢座繁忙嘅城市度，有班流浪街頭嘅男仔，佢哋日復一日噉過日子，從來都唔知道乜嘢叫做舒適安逸嘅生活。一日朝頭早，班男仔喺凍冰冰嘅行人路上面醒翻，摺埋佢哋攞嚟瞓街嘅氊仔。天氣太凍喇，為咗驅寒，佢哋就要用執翻嚟嘅垃圾點著堆火。班流浪仔中間有一個男仔叫做瑪哥威。</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
