--- a/stories/nn/0271_to.html
+++ b/stories/nn/0271_to.html
@@ -49,65 +49,65 @@ Carole Bloch<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/02.jpg" /></p>
 
+<p>To små hender for å halda.</p>
+
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/03.jpg" /></p>
-
-<p>To små hender for å halda.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/04.jpg" /></p>
 
+<p>To små føter for å sparka.</p>
+
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/05.jpg" /></p>
-
-<p>To små føter for å sparka.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/06.jpg" /></p>
 
+<p>To små auge for å sjå.</p>
+
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/07.jpg" /></p>
-
-<p>To små auge for å sjå.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/08.jpg" /></p>
 
+<p>To små øyrar for å høyra.</p>
+
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/09.jpg" /></p>
-
-<p>To små øyrar for å høyra.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/10.jpg" /></p>
 
+<p>Og to kjærlege armar for å klemma!</p>
+
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/11.jpg" /></p>
 
-<p>Og to kjærlege armar for å klemma!</p>
-
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Tekst:</strong> Carole Bloch<br /><strong>Illustrasjonar:</strong> Richard *MacIntosh<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen<br /><strong>Språk:</strong> nynorsk</p>
+<p><strong>Tekst:</strong> Carole Bloch<br /><strong>Illustrasjonar:</strong> Richard MacIntosh<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen<br /><strong>Språk:</strong> nynorsk</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/two">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
