--- a/stories/nn/0271_to_slides.html
+++ b/stories/nn/0271_to_slides.html
@@ -97,6 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/02.jpg" /></p>
+<p>To små hender for å halda.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,7 +106,6 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/03.jpg" /></p>
-<p>To små hender for å halda.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,6 +114,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/04.jpg" /></p>
+<p>To små føter for å sparka.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -122,7 +123,6 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/05.jpg" /></p>
-<p>To små føter for å sparka.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -131,6 +131,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/06.jpg" /></p>
+<p>To små auge for å sjå.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -139,7 +140,6 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/07.jpg" /></p>
-<p>To små auge for å sjå.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -148,6 +148,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/08.jpg" /></p>
+<p>To små øyrar for å høyra.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -156,7 +157,6 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/09.jpg" /></p>
-<p>To små øyrar for å høyra.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -165,6 +165,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/10.jpg" /></p>
+<p>Og to kjærlege armar for å klemma!</p>
 <center>
 <strong>9</strong>
 </center>
@@ -173,7 +174,6 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/11.jpg" /></p>
-<p>Og to kjærlege armar for å klemma!</p>
 <center>
 <strong>10</strong>
 </center>
@@ -182,7 +182,7 @@
 <section class="slide level1">
 
 <h2 id="to-1">To</h2>
-<strong>Tekst:</strong> Carole Bloch<br> <strong>Illustrasjonar:</strong> Richard *MacIntosh<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Carole Bloch<br> <strong>Illustrasjonar:</strong> Richard MacIntosh<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
