--- a/stories/no/0315_sakimas-sang_slides.html
+++ b/stories/no/0315_sakimas-sang_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Den svoltne krokodilla - Global African Storybook</title>
+  <title>Sakimas sang - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="den-svoltne-krokodilla" class="slide level1">
-<h1>Den svoltne krokodilla</h1>
+<section id="sakimas-sang" class="slide level1">
+<h1>Sakimas sang</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/02.jpg" /></p>
-<p>Det var ein gong ei veldig svolten krokodille.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/02.jpg" /></p>
+<p>Sakima bodde sammen med foreldrene sine og sin fire år gamle søster. De bodde på eiendommen til en rik mann. Hytta deres hadde stråtak og lå ved enden av en rad med trær.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,9 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/03.jpg" /></p>
-<p>Ho leitte etter mat sakte og lydlaust.</p>
-<p>Og så...</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/03.jpg" /></p>
+<p>Da Sakima var tre år gammel, ble han syk og mistet synet. Sakima var en gutt med talenter.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/04.jpg" /></p>
-<p>Pang! Krokodilla slår til!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/04.jpg" /></p>
+<p>Sakima kunne mange ting som andre seksåringer ikke kunne. For eksempel kunne kan sitte med eldre landsbymedlemmer og diskutere viktige saker.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
-<p>Etterpå er ho ikkje svolten lenger, og ho er nøgd.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/05.jpg" /></p>
+<p>Foreldrene til Sakima jobbet i huset til den rike mannen. De dro tidlig om morgenen og kom tilbake sent på kvelden. Sakima ble igjen sammen med lillesøstra si.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/06.jpg" /></p>
-<p>Til ho vert svolten att.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/06.jpg" /></p>
+<p>Sakima elsket å synge sanger. En dag spurte moren hans ham, &quot;Hvor har du lært disse sangene, Sakima?&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,12 +141,129 @@
 </section>
 <section class="slide level1">
 
-<h2 id="den-svoltne-krokodilla-1">Den svoltne krokodilla</h2>
-<strong>Tekst:</strong> Christian G.<br> <strong>Illustrasjonar:</strong> Wiehan de Jager<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/07.jpg" /></p>
+<p>Sakima svarte, &quot;De kommer bare, mamma. Jeg hører dem i hodet mitt og så synger jeg.&quot;</p>
+<center>
+<strong>6</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/08.jpg" /></p>
+<p>Sakima likte å synge for lillesøstra si, særlig hvis hun var sulten. Søstra hans pleide å høre på at han sang yndlingssangen sin. Hun beveget seg til den lindrende låten.</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/09.jpg" /></p>
+<p>&quot;Kan du synge den igjen og igjen, Sakima,&quot; pleide søstra hans å be ham. Sakima aksepterte og sang den igjen og igjen.</p>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/10.jpg" /></p>
+<p>Én kveld da foreldrene hans kom hjem, var de veldig stille. Sakima visste at noe var galt.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/11.jpg" /></p>
+<p>&quot;Hva er i veien, mamma, pappa?&quot; spurte Sakima. Sakima fikk vite at den rike mannens sønn var borte. Mannen var veldig lei seg og ensom.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/12.jpg" /></p>
+<p>&quot;Jeg kan synge for ham. Kanskje han blir glad igjen,&quot; sa Sakima til foreldrene sine. Men foreldrene hans avfeide ham. &quot;Han er veldig rik. Du er bare en blind gutt. Tror du sangen din kommer til å hjelpe ham?&quot;</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/13.jpg" /></p>
+<p>Likevel ga ikke Sakima opp. Lillesøstra hans støttet ham. Hun sa, &quot;Sakimas sanger er lindrende når jeg er sulten. De kommer til å virke lindrende på den rike mannen også.&quot;</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/14.jpg" /></p>
+<p>Neste dag ba Sakima lillesøstra si om å lede ham til huset til den rike mannen.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/15.jpg" /></p>
+<p>Han stod nedenfor et stort vindu og begynte å synge favorittsangen sin. Sakte begynte hodet til den rike mannen å vise seg gjennom det store vinduet.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/16.jpg" /></p>
+<p>Arbeiderne stoppet det de holdt på med. De hørte på Sakimas vakre sang. Men én mann sa, &quot;Ingen har vært i stand til å trøste sjefen. Tror denne blinde gutten at han kan trøste ham?&quot;</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/17.jpg" /></p>
+<p>Sakima var ferdig med å synge sangen og snudde seg for å dra. Men den rike mannen skyndte seg ut og sa, &quot;Vær så snill og syng igjen.&quot;</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/18.jpg" /></p>
+<p>I samme øyeblikk kom det to menn bærende på en båre. De hadde funnet den rike mannens sønn banket opp og forlatt i veikanten.</p>
+<center>
+<strong>17</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/19.jpg" /></p>
+<p>Den rike mannen var veldig glad for å se sønnen sin igjen. Han belønnet Sakima for at han trøstet ham. Han tok sønnen sin og Sakima med til sykehuset slik at Sakima kunne få synet tilbake.</p>
+<center>
+<strong>18</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="sakimas-sang-1">Sakimas sang</h2>
+<strong>Tekst:</strong> Ursula Nafula<br> <strong>Illustrasjoner:</strong> Peris Wachuka<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
 <p>
-This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
+Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/hungry-crocodile'>here</a>
+Du kan se den originale fortellingen på ASP-websida <a href='http://africanstorybook.org/stories/sakima%E2%80%99s-song'>her</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
